Feat: addressed PR feedback
Signed-off-by: Eloy Coto <eloy.coto@acalustra.com>